sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:11: error: reassignment to val
        j = best
          ^AlgInsertionSort:15: error: not found: value j
    echange(j,v)
            ^